--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-
+body{
+    font: arial, helvetica, sans-serif;
+}
 #container {
     width: 1000px;
-    border: 1px solid #b9e6d3;
+/*    border: 1px solid #b9e6d3;*/
     margin: 0 auto;
 }
 
@@ -23,6 +25,9 @@ h1 a{
 #searchbox {
     float: right;
     background: linear-gradient(#B9E6D3, #F2F2F2);
+    -wekit-background: linear-gradient(#B9E6D3, #F2F2F2);
+    -mos-background: linear-gradient(#B9E6D3, #F2F2F2);
+    -o-background: linear-gradient(#B9E6D3, #F2F2F2);
     width: 400px;
     height: 50px;
     padding: 20px 20px 0 20px;
@@ -35,6 +40,7 @@ h1 a{
     font-size: 15px;
     color: #EF725E;
     background: white url(images/search2.png) right center no-repeat;
+    border: 1px solid #BCE6D5;
 
 }
 
@@ -56,6 +62,9 @@ h1 a{
 #menu{
     height: 70px;
     background: linear-gradient(#F2F2F2, #EF6C57);
+    -wekit-background: linear-gradient(#F2F2F2, #EF6C57);
+    -mos-background: linear-gradient(#F2F2F2, #EF6C57);
+    -o-background: linear-gradient(#F2F2F2, #EF6C57);
     padding: 7px 0;
 }
 ul{
@@ -90,4 +99,73 @@ ul{
 }
 #introduction{
     background: linear-gradient(#B9E6D3, #F2F2F2);
+     -wekit-background: linear-gradient(#B9E6D3, #F2F2F2);
+    -mos-background: linear-gradient(#B9E6D3, #F2F2F2);
+    -o-background: linear-gradient(#B9E6D3, #F2F2F2);
+    padding: 30px;
+    margin: 16px 0;
+}
+#introduction h3{
+    font-size: 45px;
+    color: #07456F;
+    font-weight: normal;
+}
+#introduction p{
+    font-size: 25px;
+    color: #07456F;
+    text-align: right;
+}
+.sidebar{
+    height: 550px;
+    width: 400px;
+    border: 1px solid #EF7F6E;
+    border border-radius: 20px;
+    padding: 10px 30px;
+}
+#leftsidebar{
+    float: left;
+}
+#rightsidebar{
+    float: right;
+}
+.sidebar h3{
+    color: #EF7B68;
+    font-size: 30px;
+}
+.sidebar ul li  a{
+    text-decoration: none;
+    font-size: 20px;
+    color:#07456F; 
+}
+
+#leftsidebar ul li{
+    padding-bottom: 6px;
+    padding-left: 10px;
+    list-style-image: url(images/arrow.png);
+}
+#rightsidebar ul li{
+    padding-bottom: 6px;
+    padding-left: 10px;
+    list-style-image: url(images/arrow.png);
+}
+.sidebar ul li  a:hover, .sidebar ul li  a:active{
+    text-decoration: none;    
+    font-size: 23px;
+    font-weight: bold;
+    color: #07456F;
+    -webkit-transition: font-size 0.3s linear;
+    -moz-transition: font-size 0.3s linear;
+    -o-transition: font-size 0.3s linear;
+    -ms-transition: font-size 0.3s linear;
+    transition: font-size 0.3s linear;
+}
+.footer{
+    height: 60px;
+    background: linear-gradient(#B9E6D3, #F2F2F2);
+    -wekit-background: linear-gradient(#B9E6D3, #F2F2F2);
+    -mos-background: linear-gradient(#B9E6D3, #F2F2F2);
+    -o-background: linear-gradient(#B9E6D3, #F2F2F2);
+    padding: 10px 30px;
+    margin-top: 15
+    
 }
